--- a/writing/writing-10.html
+++ b/writing/writing-10.html
@@ -80,7 +80,7 @@ return false;
 	<div class="tophead1">
 		<ul class="tophead">
 			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
 			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
 			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
 			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
@@ -113,42 +113,41 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+	
+		
+		<h3>《吃金鱼》</h3>
+		<p>坚持去做一样什么事情非常困难，特别是在当她知道她没有脑子的时候。脑子却是个好东西。</p>
+		<p>她在地铁门口，任人挤着，想要跃出人群踏上地铁的门，可是失败了，另外一个人将她挤了下去，是一个美丽的女孩子，穿着灰色的衣服，她的衣服上似乎不是花纹，而是血迹。她感到自己十分不幸，但又无可奈何，她只好睁大着眼睛，把所有的愤怒都用在瞳孔上看着那个灰色的女孩，女孩吓了一跳，先是疑惑了一下，想到怎么会有这么没礼貌的人；后来也蹩脚地翻了一个白眼给马鹿。当然不能够示弱，她们死死地盯着对方直到列车开走把她们对视的眼睛强行拉开。两边的玻璃上都起了薄薄的一层雾气。用这样的方式来引起别人的注意可以说是一种挑衅了。</p>
+		<p>
+			马鹿想过有一天能够见到里厄。<br />
+			里厄呀，独特的里厄，他名字的拼音是lie，他是谎言。<br />
+		</p>
+		<p>他带着独特的，不寻常的写作方式出现在人们面前，给人们带来耳目一新的作品，但他从没有在哪个媒体的报道里出现过，他总是像游魂一样无法被人们捕捉住。他新发售的小说《吃金鱼》得到了许多评论家的赞赏和推荐，这本书开始被人们供奉，被人们誉为是年度最佳，被买断了好几次，厂商也在疯狂的印了一版又一版。也越来越多的人为了潮流去阅读这本书，就算没有时间读也会将这本书买下，他们想要能够在别人面前说出这本书的一二，但都是被虚荣心和好胜心驱使的。也越来越多的记者和媒体想要通过各种手段去得到他的照片，为自己的平台带来流量带来读者。</p>
+		<p>马鹿也是他的读者之一，她花了很长的时间去阅读每一个文字，但是还是没有搞懂这本书在说什么。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>后来到了潮湿的季节，房子里的任何事物都是湿润的。人们在这个季节会有特殊的嗜好：各种成瘾，性，兴奋剂，愉悦，赌博，暴食，熬夜... 多巴胺的奖赏回路在不断地让人们嗜取着某种东西但却为此感到焦虑。然而她早晨醒来想到的第一件事情就是时间，如果看到的时间还很早会心安。</p>
+		<p>醒来后脑子就开始工作，神经元开始传递信息。开始回忆昨天想着今天该做的事情。然后她开始喝茶，有时候会喝咖啡，很浓很浓的茶或者咖啡，浓到变成黑红色。她对咖啡因敏感，所以很快就起作用，然后精神起来。</p>
+		<p>她将手放在键盘上，开始幻想：自己见到了里厄，于是他们打招呼，但是简单的问候了几句就再也说不上话了。因为人终究不是能和所有人聊得来的。</p>
+		<p>难得的是，就算这样她也终于开始打字了。在此之前已经足足有三个月没有用过电脑了。从船上下来到现在。她不知道要用“我”还是“她”开头，她记不起来了。不过后来她写下几个字：“寻找里厄”。潮湿的天气经常下雨，这也使她的手掌湿润。她尝试思考：里厄会在哪里？也许是藏在很深很深的森林里，或者是在海底里面的一个水晶房子，或者住在很高的高级公寓，或者只是和我一样住在普通的出租房里？不论如何，没有任何线索是找不到他的。马鹿停止了思考，思考令人费神。</p>
 		<p>&nbsp;</p>
 		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
 		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
 		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		也许里厄不希望我找到他？<br />
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
-		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
-		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>也许是吧。马鹿到现在为止遇到了很多人，不论是他们还是她们，但都相继开始讨厌她。很多时候这样的社会关系也让马鹿感到困扰和羞耻。但是又有一种力量驱使和逼迫着她与人们相处，不过这起码能使她不被社会抛弃。努力地想尽办法被社会发现是一件很困难的事情，尤其是在现在所有人的关注点都在里厄身上。她重新打开里厄的书，整本故事讲的是一个人在家里有一个鱼缸，在这个鱼缸里养了一条金鱼，非常非常普通的大眼金鱼。这个人还在患有轻微精神疾病的状态下仍然坚信自己是健康的（实际上是他自己不想面对不完美），不愿意花钱去医院看心理医生，他其实去过一次，但是医生的态度很恶劣（是他自己这么觉得），就再也没有去过了。在这件事情的驱使下，他终于开始出现了幻觉：鱼缸里的大眼金鱼开始慢慢地长大。一开始这个人意识到这是不可能的事，他开始强迫自己不去这么想，但是没有办法，过了几个星期这个金鱼越来越大，已经大到在这个鱼缸里没有多余的位置让它活动了。他晚上开始做梦，梦见这只庞然大物不停地在生长，甚至还和他对话：只要有一天它没有吃饱，就会把这个人吃掉。他一开始没太在意，后来连续几天都梦到同样的梦，就像哈利波特经常梦到伏地魔一样，醒来的时候一身盗汗。说起来挺令人后怕的。之后他一天三次喂食，一次也不敢懈怠。这个金鱼越吃长的越大，它在浴缸里已经挤到变形了，他只好将它放到鱼缸里养着。</p>
+		<p>这个人没有工作，生活靠社会福利，所以他并不富有。</p>
+		<p>金鱼越吃越多，它的食量越来越大。他没有办法，他害怕有一天金鱼会吃掉他，他饿着自己也会给金鱼买吃的。他沉思着。他在努力的想办法，他到处借钱给金鱼买饲料，但是没有人愿意借给他，也没有人愿意帮助他，他很无助。深夜里他无法入眠，他开始辗转，于是他拿起了刀叉慢慢地犹豫着地，走进了浴室。他想：只要他把金鱼吃了，金鱼就吃不了他了。他像是决定好了一样昂首挺胸的走到鱼缸前，拿着刀划开了它的肚子，撕扯着它的内脏。浴室里终于变成了血红色，他将鱼骨全都剔了出来，它身上的鱼鳞就电影里的龙鳞一般，手掌心一样大，飞散在浴室的墙上和地上。到了这个时候还是能够看见它的嘴巴在一张一合，像是不甘心地在努力呼吸。这个人开始用刀切鱼肉，一片一片，他在浴室里吃了三天三夜。他已经感觉不到味道了。他干枯的身体正在用尽所有的力气去消化这些鱼肉。他到了街上，没有地方让他落脚。处处都是别人异样的眼神。他开始怀疑，开始不自信。一种黑色的力量正在吞噬他，一个像金色钱币一样的洞正在向他靠近，他开始奔跑，想要逃到没有人的地方；可是没有用，身边总是有人会靠近他，他对着别人大声嘶吼想和别人保持距离。他跑到地铁站里，跨过闸门，里面一如既往的人多，他们簇拥着。刚好一辆列车到站了，他纵身越过所有的人，挤上了那辆车。但他看到车门外的一个女孩却用她硕大的眼睛瞪着他。</p>
+		<p>在这个世界上，是他留下的肮脏的，带有腥臭的，血液凝结着的，如同遗迹般优雅的浴室。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2020.05.29
+		<img src="../image/writing/吃金鱼.jpg" alt="" width="660px">
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p> --->
+		<p>&nbsp;</p> 
 
 	</div>
 	</div>
