--- a/writing/writing-11.html
+++ b/writing/writing-11.html
@@ -30,7 +30,7 @@ return false;
 }
 </script>
 <!---------密码需要------------>
-<!---
+
 <script type="text/javascript">   
 	function password() {   
 	var testV = 1;   
@@ -38,7 +38,7 @@ return false;
 	while (testV < 3) {   
 	if (!pass1)   
 	history.go(-1);   
-	if (pass1 == "0525") {//初始密码123   
+	if (pass1 == "g") {//初始密码123   
 	alert('Password correct');   
 	break;   
 	}   
@@ -51,7 +51,7 @@ return false;
 	return " ";   
 	}   
 	document.write(password());   
-	</script> -->
+	</script> 
 </head>
 	
 <body>
@@ -80,7 +80,7 @@ return false;
 	<div class="tophead1">
 		<ul class="tophead">
 			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
 			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
 			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
 			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
@@ -113,42 +113,22 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
-		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
-		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
-		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
-		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
-		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
-		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		
+		
+		<h3>《1810号房间》</h3>
+		<p>这是马鹿在疫情以来拥有美好回忆的一个晚上，这个回忆在1810号房间发生。</p>
+		<p>马鹿对朋友说，如果她用世界上最华丽最不朴实的语言去写文章的话，那这个文章会变得怎么样？可读性会不会消失，被大家认为是单纯的炫耀？不过不论怎么样都会有人说。她已经听到许多人说自己的文章是极具情绪渲染能力的，这是她是从她的朋友们口中听说的，但也许有人认为这些只是一些狗屁不通的流水账，只是没有说出来，为了保留朋友之间最后一点的情面，不至于让双方陷入一种尴尬的状态。但是她没有放弃写东西，尽管在很多时候她发现她的逻辑能力只能用“糟糕”来形容，就算看了再多的批评也是如此，这让马鹿失去了信心，结果就是她不再看这类的书。后来她的朋友对她没说什么。她直接来到了马鹿所在的城市，希望能够与她以朋友的身份交流。见面之后她们笑着看着彼此，她们之间似乎少了什么，噢对，是背景音乐。</p>
+		<p>那天下午，她们坐在一间面包店里，看着对面的情侣对彼此的亲昵举动，她们不禁谈论起各自的另一半。事情似乎就发生在昨天。但是记忆越来越模糊，只记得女孩子们相互嘲笑着自己，别的也记不起来了。唯独记忆深刻的是她们泡在泳池里，蓝蓝的泳池，冰凉的泳池，那是1810的附赠品，她们很享受。就想象吧，在泳池里，只有她们。那是城市中间的一个露天泳池，抬头看不到美好的景色，而是写字楼，回过神来发现是压抑的。朋友说她无法恋爱了，马鹿没有回应，也许是成长地还不够，不懂如何去接应。也不明白这是一种什么样地感觉。只觉得人总有矫情的时候。但她就像一首诗，温柔地，缓慢但按时地出现在了马鹿地生命中。这是何等的幸运？于是在马鹿的世界里，再也少不了她了。这些年里她们相互了解着，相互支撑着，在彼此残缺的精神里充当那个能够最后支撑着天花板的角色。想着啊！便不自觉地看了看自己的手，再也不如以前这么稚嫩了。马鹿珍惜着她。</p>
+		<p>这是地球上每一个人都在经历的事：瘟疫。人们用了一年的时间也没能将它战胜。同时人们也在感叹着它的顽强。这场瘟疫带来了许多，也夺走了许多。如果马鹿想要抱怨，那便是：“瘟疫使她变成了只身一人。”离开1810号房间之后的一个晚上，马鹿打了个电话给她，对着她抱怨自己要开学了，英文还没学好就要用英文写作业了，说着说着就开始抽泣，马鹿也不明白为什么自己总是情绪这么上下波动和多愁善感，有时甚至是狂躁。再后来又打了个电话给她，说的是自己和在一起了五年的男朋友分手了。马鹿就在家楼下的那个汽车充电站徘徊了好久，举着剩下百分之20电量的手机打了两个半小时，时不时对着电话那头哭泣。那晚像是被雷电击中了一样，心里酥酥麻麻的，一整夜都是。肿着眼睛上楼了之后就把她自己锁在了房间，她回忆着朋友给她想到的那些主意，她一个都不喜欢。她甚至好几次想拿起手机打电话过去求他和他说自己不想分手了。如此卑微的她，到处寻求别人的帮助，似乎情感的宣发途径从一个大容量黑洞变成了一堵墙，她的心里无数遍呐喊着“救命”两个字，同时她清楚也明白没有人能够帮得了她。这是她第一次遇到这样的事。</p>
+		<p>后来她学会了抽烟，学会了喝酒，学会了以更加自如的方式去社交。她开始读不下小说，杂念越来越多，通讯录的人突然超过了一千个，时不时在搜索栏里输入如何缓解焦虑，到了要吃药的时候又发现自己其实挺正常的。月经越来越不正常，头发随着月经前后开始无下限脱落，皮肤也越来越差。她想着啊！向着自杀的方向去了，但是理智会突然让她清醒。无助的身体和心灵。多想要得到爱啊！因为自己无法好好得爱自己啊！多想要建立起来属于自己的安全感啊！她羡慕别人呀！多么多么羡慕呀！也许是矫情和懦弱在作祟，激素也有参与。最后一个问题是：马鹿的家在哪？但1810号房间让马鹿睡地很安稳。</p>
+		<p>“也许她没法好好爱一个人了，但是也渴望着被爱啊！她的眼泪快要掉下来了，这就是她的感受。每次回想起来，就会心痛。”-NANA</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2020.10.17
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p> --->
+		<p>&nbsp;</p> 
 
 	</div>
 	</div>
