--- a/writing/writing-8.html
+++ b/writing/writing-8.html
@@ -80,7 +80,7 @@ return false;
 	<div class="tophead1">
 		<ul class="tophead">
 			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
 			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
 			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
 			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
@@ -111,42 +111,62 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+		
+		
+		<h3>《燕子啊燕子》</h3>
+		<p>邻居家出生了一个婴儿，大喊大闹的婴儿，这不禁使人感慨：生下一个人多么容易！马鹿在自己的房间里就能听得清清楚楚，隔壁的夫妇从第一次见面到做爱，吵架是听的最清楚的时候，然后他们结婚，最后生下一个婴儿。一气呵成。人的生命就是这么短暂。</p>
+		<p>马鹿从床上下来，穿过客厅，出了门，来到邻居家门口，敲了几下门。邻居开门了，马鹿站在门口说：“恭喜”，邻居有点疑惑，马鹿说：“就是，我听到隔壁有小孩出生了，我觉得不错，所以我就过来了。”邻居没有说话，马鹿的眼睛不自觉地到处看，然后说：“你知道吗，你们做爱的声音能让我在看书的时候把一行字看二十遍”，“嘭！”邻居摔上门。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>这比起马鹿在轮船上幻想自己跳海的故事要精彩多了。她还是没有这个胆子做这样的事情，况且她说过了，她意识到生命的重要性了。海上的气候阴晴不定，也许是水比较多。还记得在船上的时候，一位奶奶得到了一封马鹿的信，她仔细读完了之后装回信封，用口水重新封好，拄着拐杖颤颤巍巍地走到马鹿面前，把信扔回给了她，上下打量了一下马鹿，并说：“知道你是个不入流的家伙，但我也不是那种你给我什么我都会要的人。”马鹿注视着她。她指了指海，海上有浪花。“这是海水。”马鹿说。她说“我知道”。马鹿注视着她，然后她离开了。马鹿拿着信，注视着大海。于是她思考着，想象自己有了工作是什么样子的。她挣扎着，工作对她来说是多么重要的事情，父母已经和她说从此不会再养着她了。她开始害怕！没有了父母，自己就是一坨狗屎，一坨又臭又恶的狗屎！她点燃一根烟，顺着空气将烟吸进肺里，用肺努力地尽可能地过滤更多的尼古丁，能让脑子更清醒。噢！她突然想起来，这艘船要在海上航行四天！所以如果她跳进了海里，她就没有食物，没有水，只能在海上漂流好几个星期。说起来真可怜，如果真的是这样的话，那人的皮肤都发白了。幸好没有跳下去。她思考着，她将烟头丢到了地上，用鞋踩灭，踢开了。</p>
+		<p>“嘿！你乱丢什么！”一个女孩对马鹿喊道，一边抬头对着她的爸爸说，“你看！有人乱丢垃圾！”，然后爸爸顺着女孩手指的方向看了马鹿一眼，然后把她抱起，小声和她说了什么。马鹿没有理会，她把双手插到卫衣的口袋里，继续看着外面。女孩突然大哭起来，然后她爸爸哄了好一会，最后走到马鹿面前和她说：“不好意思，还是希望你能把烟头捡起来，不然我的女儿可能会哭个不停。谢谢你，麻烦了！”。马鹿只好去将烟头捡起来，看了看四周，没有垃圾桶，然后扔到了海里。然后她后悔了。</p>
+		<p>站在那只会继续尴尬，于是她离开了。她在功能区游荡，来到了图书室，里面有许多外文书，有很多日语的书。除了自己能看懂的中文书，其他语言的书看起来都更高级。不过对于别人来说，可能中文是最顶的吧，因为，即使是母语者马鹿也不能看懂某些中文书。西班牙语是第一高级的，因为她不认识任何一个西班牙词语；然后是法语，之前的法国朋友教会了她几个简单的词语和C'est la vie！第三名是日语，日语和中文长得很像，但是却更可爱；最后一名是英语。英语这个廉价的语言，根本不需要某个特定国家来作为这个语言的出生国，甚至也不需要母语人来继承和发展，没有一点仪式。哪怕是人们想说脏话都开始用英语说了。“fuck！”马鹿不由自主地说了一句什么。逛了一会儿她发现这个图书室大部分都是小说，也许是希望人们不要这么频繁地换书，但小说看起来特别费劲，像是要鼓起勇气做的事情一样。大部分时间她是依靠小说的名字和书本的封面，有时候是作者的名字（因为大部分你欣赏的书，作者的名字对于你来说都很特别）才决定要不要看它，而不是因为看到某些评论。说起评论，马鹿回忆起来，有一次她在某本杂志上看到了一个把某本书吹上天的书评，然后评论家给了五颗星！结果她买回家读了几页就读不下去了。后来她就再也没有相信过这种东西。艺术批评也是一样。后来她没有选小说，而是选了旁边一本Key Nielsen[1]插画集靠着窗边翻看了一会儿。然后她准备借走。</p>
+		<p>她拿着这本书走到管理员面前说“你好，我想借这本书”，年轻的管理员听不懂中文，用日语说着什么，后来马鹿尝试用英文告诉她，最后管理员蹩脚的英文勉强让马鹿明白了：在门口的表格上写下书的编号和房间号。最后她借走了这本插画集。</p>
+		<p>最后她走回自己的房间。在门口找房卡的时候遇到邻居出来，是早上和她说话的奶奶。“噢”奶奶说。“原来你就住在隔壁！”她斜背着一个小小的陶瓷罐。“你好”马鹿开了房门，然后进去了。</p>
 		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>奶奶带着陶瓷罐再次来到甲板上，她拿出自己昨天借的Complete fairy tales of OSCAR WILDE，开始阅读，这是奥斯卡王尔德的故事集，里面有一个故事叫《快乐王子》，她正在看这一篇。她读着，心想这个故事一点都不新颖，怎么会有快乐王子，世界上没有快乐王子，如果有，他也不会把宝石都送给别人。她已经习惯了一个人生活，一个人生活的时候会把什么都告诉自己。她对这本书没有兴趣，但是她也找不到其他感兴趣的书。所以她经常看着看着就走神，开始思考，为什么船上的服务员都这么丑？他们都住在哪？船上最豪华的客房都是什么样的？她想着她一上船就注意到那个男服务员的眼睛时不时地盯着她旁边女服务员的胸看，还有他们检票的时候总是没法完美地沿着针孔撕下来。想到这她长舒了一口气，但是风海把她吹出来的气吹回来了，闻到了早餐的烤香肠味。她继续读书。</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p><i>“王子说：‘燕子啊燕子，我看见城市的另一边，阁楼上的一个年轻人正在写剧本。他的桌子上铺满了纸，旁边的玻璃杯中还放着干枯的紫罗兰。他的头发又棕又卷，他的嘴唇像石榴一样红，还有一双睡意朦胧的眼睛。他正在努力地给剧院导演写剧本，但是天气太冷了，冻得他的手无法写字。壁炉里也没有柴火，饥饿是他头昏眼花。’</i></p>
+		<p><i>‘那我再陪你过一夜。’燕子说，他确实有一颗善良的心。‘我要不要再给他送一块红宝石？’</i></p>
+		<p><i>‘唉！我已经没有红宝石了。’王子说。‘但是我还有我的眼睛，是一千多年前从印度出产的蓝宝石做成的。取一颗给他送去。他会将宝石卖给珠宝商，好买食物和火柴，完成他写的剧本。’</i></p>
+		<p><i>‘亲爱的王子，’燕子说。‘我不能这样做！’说完就哭了。</i><br />
+		<i>‘燕子啊燕子，’王子说，‘就按照我说的做吧。’</i></p>
+		<p><i>因此燕子取下了王子的一只眼睛，往年轻人的阁楼飞去了。由于屋顶上有一个洞，燕子很容易进去。就这样燕子穿过洞来到屋里。年轻人双手捂着脸，没有听见燕子翅膀的扇动声，等他抬起头时，正看见那颗美丽的蓝宝石放在干枯的紫罗兰上面。</i></p>
+		<p><i>‘天啊！’他叫道，‘这一定是是某个极其钦佩我的人送来的。现在我可以完成我的剧本了。’他脸上露出了幸福的笑容。”[2]</i></p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
+		<p>奶奶也笑了。她不是觉得这个故事好，她是在嘲笑这个故事。丈夫停下来，说他读完了，是时候离开了，奶奶拉住他说再等等，等到太阳下山再走。丈夫说好。于是就陪她等到了这个时候。后来丈夫没说是什么时候走的，总之，奶奶醒来的时候天空已经是深蓝色，她的口水也已经把她的嘴皮泡白了。她摸了摸身上的陶罐，整理了一下自己的围巾和外套就回去了。这个下午就这么结束了。</p>
+		<p>马鹿坐在她的窗前，看完了那本插画集，她突然感觉到一股热潮涌上了脑子，她拿出纸和笔，想写些什么，但她开始犹豫是要“我”开头，还是要用“她”。总之，最后什么也没有写，但照着插画集临摹了里面的作品。大部分是关于公主和王子的爱情故事。“滴”，是隔壁门卡开房间的声音，她意识到隔壁的奶奶回来了。于是她起身，来到她的房间门口，敲了敲门。门开了。</p>
+		<p>“你好，我是马鹿”她说。“你有什么事吗？”奶奶问她。马鹿说我没什么事，就是有点无聊，不过我在想能不能和你一起去吃晚饭。因为...我看见你也是一个人。奶奶说不了，她刚从外面回来，很累想睡觉。“嘭！”邻居摔上门。</p>
 		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
+		<p>第二天，奶奶开始想念自己的丈夫了，她带着她的陶罐来到了甲板上，她开始感到忧伤。由于老了，稍微敏感的刺激就会让她的大脑神经失控，然后开始流眼泪。她常常和别人这么解释，但是实际上就是她感到难过了。这个样子的老人看起来特别可怜。她开始哼哼地唱，唱她经常唱的意大利语歌。马鹿在旁边听见了，她在鼓掌。奶奶说谢谢。马鹿说不客气。</p>
+		<p>马鹿和奶奶说她觉得好听。奶奶咯咯地笑了。马鹿问这个陶罐装的是什么，为什么一直带着它。奶奶说是她的丈夫的骨灰，她舍不得撒到任何一个地方，所以就一直带着它。马鹿没说什么，她感觉到非常抱歉。马鹿问：你的丈夫是做什么的？奶奶说他退休了。“不过他是个聋子”奶奶说。“聋子有个好处就是听不见别人骂他。”马鹿说：“但是也听不见你唱歌，不是吗？”奶奶哭了。</p>
+		<p>马鹿说：“我在写一个什么，但是不知道怎么开头。”奶奶说：“你在写什么？”马鹿说：“我不知道。”奶奶说，我可给不了你...什么意见，她摇摇头。马鹿没有说话。等了一会儿，奶奶开始说：“也许你还年轻，你身边没有谁离开了你，你无法体会，你也没法体会。你知道吗？就好像有一万只虫在你的胃里爬。”马鹿没有说话，然后她将奶奶楼在怀里。两人相互依偎着，马鹿轻轻地抚摸着奶奶的发丝，如羊毛一般粗燥和扎手，又如风一般细腻。她听着奶奶的呼吸声，带着哽咽的呼吸声。人们太经常讨论生与死，好像生死就是每个人的宿命。你能在甲板上看见的，是你在经历的；想象着每个人的眼睛都盯着你看，他们犹如琥珀一般明亮的眼睛，你从他们的眼睛里看见过去；想象着每个人都朝你唾弃，嘲笑你是无知的，难懂的，自以为是的；于是你能从他们的嘴里知道现在你的样子。至于未来是什么，没有人知道。带着哽咽的呼吸声从来都是深刻的，是带着记忆的水，从你的耳朵灌进你的胃里，在胃里找到你的波拉尼奥。马鹿松开了拥抱。奶奶说了一声谢谢，然后问她要不要一起去吃午餐？</p>
 		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>
+			中午，餐厅内。<br />
+			马鹿说：“也许我知道你说的...身边有人离开了的感受”她喝着饮料。<br />
+			奶奶说：“不可能，你绝对不可能知道。”奶奶看着她。<br />
+			马鹿说：“大概和我发脾气的感受差不多。”<br />
+			奶奶笑了。她不是觉得马鹿说的对，她是在嘲笑她。然后她们继续吃饭。“不过，也许你可以为我写些什么。”奶奶说。<br />
+			马鹿抬头，“什么？”她问。<br />
+			奶奶说：“你刚刚和我过的，你说你不知道要写些什么。”<br />
+			“噢！对。”马鹿想起来，“不过，也许吧。”<br />	
+		</p>
+		<p>于是马鹿回到房间，开始写：在海上；在你的子宫里；在你的牙床下；也在肚皮夹层中。老人嘴角的泛白为的是，能够与你传达她的歌声。写下的诗，是有生命力的；是被嘲笑的；是被夸张的；是被撕毁的。但是读出来的故事，是预言；是理解。最后你发现；这是个<strong>轮回</strong>。晚上的时候她将这个拿去隔壁给了奶奶，问奶奶能不能帮她翻译成日语，因为她觉得日语可爱，奶奶说好。于是奶奶翻译：海上で；あなたの子宮の中で；歯茎の下で；お腹の中にもある。老人の口元が·白くなる·のは，あなたに彼女の歌声を伝えることができます。書いた詩に，生命力があっている；笑われている；誇張されている；引き裂かれている。でも 読んだ物語は、予言と理解です。最後に貴方が気づいたのは，これは輪廻です。[3]</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2020.02.17
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p> --->
+		<p>
+			注释：<br />
+			[1] 凯·拉斯莫斯·尼尔森（Kay Rasmus Nielsen）（1886.03.12-1957.06.21）是丹麦插画家，在20世纪初期“插画的黄金时代”广受欢迎。从丹尼尔·维吉尔（Daniel Vierge）和其他先驱者开发印刷技术开始，一直持续到图纸和绘画可以在合理的条件下复制。尼尔森（Nielsen）以与迪斯尼（Disney）的合作而闻名，为此他贡献了许多故事素描和插图，尤其是《幻想曲》（Fantasia）。<br />
+			[2] 此处引用为作者翻译，原文来自Complete fairy tales of OSCAR WILDER；Penguin Putnam Inc. 2008.10.07出版，美国纽约。<br />
+			[3] 此处为鄢煜欣翻译。
+		</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p> 
 
 	</div>
 	</div>
