--- a/writing/writing-9.html
+++ b/writing/writing-9.html
@@ -80,7 +80,7 @@ return false;
 	<div class="tophead1">
 		<ul class="tophead">
 			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
 			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
 			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
 			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
@@ -113,39 +113,37 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
-		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
-		<p>&nbsp;</p>
+		
+		
+		<h3>《末日的前一天》</h3>
+		<p>“我不希望你动不动就说自己很可怜，很渺小，很卑微，甚至一副想要死掉的样子。你有时候是该想想一些积极的事情，比如你和家人温情的时候，或者你得到了表扬和赞美。不必每天都是没有表情的样子。你知道我在说什么吗？就好像你生病了也要积极向上起来，这样才会让你的身体和心灵都赶快好起来，而不是一味的吃很多药。实际上医生都会建议你放轻松。”电话里说。</p>
 		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
 		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>
+			“对啊，所以他们都去死吧。”马鹿说。<br />
+			“......”电话那头没说话，“嘟...嘟...嘟...”电话那头挂了。<br />
+			“喂？”马鹿手里还拿着免费心理咨询宣传单，大拇指指着他们的热线电话。<br />
+		</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p>事实上，能够拿出来说的事情也没有多少了。马鹿准备在甲板上度过在船上的最后一天。最后一天船上的气氛变得紧张和期待。每个人都想象着下船的时刻，是一种期盼，蠢蠢欲动。上回那个在甲板上大声斥责马鹿乱丢烟头的女孩，再见到马鹿的时候居然对着她的鞋吐了一口口水，马鹿气的说不上话，抓着她的两个手塞进了松紧裤里，然后用救生圈将她整个套住。巧合的是，由于女孩有点胖，小号的救生圈刚好将她卡的严严实实，无法动弹。马鹿转过身对奶奶说，这就是狗屎。</p>
+		<p>以大欺小是马鹿最擅长的事情，仗着自己比别人年长，就开始命令，批评，惩罚别人。这是一种象征，一种对绝对的和至高无上的对权利的追求，因为别人比自己年纪小就没有办法能够打赢她，这是最后的决胜武器，只要将他们打败了，这个人就能当上他们的领导者。很多人没有注意到这样的优势，而且实际上每个人都能有这样的机会，战胜别人的机会。后来马鹿回忆起这件事，后悔没将女孩丢到海里。</p>
+		<p>也许是大家都非常善良和共同向往一种共产主义的乌托邦吧。</p>
+		<p>政治正确在生活中时常被别人提起，一种只要你想动一点歪脑子就会被抓去反复观看名人事迹和政治教育的事情。有时候你会被他们的事迹感动到痛哭流涕，下一秒却开始觉得这简直是史上最大的笑话。船上很多人都拿着马鹿的信，他们能够偷窥她的心理活动，这是大家能够稍微得到一些满足的快感。对于那些拿着对父母满怀感激的信的人，他们也是快乐的，因为还记得吗？大部分人都是软糯的，并且希望社会是共产主义，他们会认为马鹿是一个无比孝顺和谦逊的人。而对于另外一些拿着咒骂信封的人，他们大部分还没看完就已经将它撕碎了，有些直接递给了服务生，一些服务生看不懂，但是又觉得中文好看，就收藏起来了。大部分泥泞的路都能够被水泥盖住，甲板上的铁皮却使人不太安心，好像下一秒就要被水和空气氧化消失，然后他们所有人都会沉到海里。</p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
+		<p>但是不是，甲板上很安全，还有扶手栏杆，制作船的人想的很周到，他们不想人们死去。人们也许不记得了，为什么要活得这么小心翼翼？大概只是记得自己的父母是这么要求的。人们站在甲板上，偶尔会遇到一些小岛，偶尔会有海鸥，在过去海鸥愿意停在帆的直杆上，现在的船已经不在依靠帆了，也就没有海鸥愿意停留在现在的船上。马鹿只能看着他们飞来飞去。她开始和奶奶形影不离，和她交谈，共进晚餐，一起讨论人世间的险恶。奶奶说，不要随便后悔，就好像刚刚你没有把女孩扔到海里一样，没有意义。马鹿说，如果不这样就会显得自己傻里傻气。</p>
+		<p>马鹿经常为自己做过的事情感到后悔。她很后悔她把自己的信分发给了船上的人，她很后悔自己写了诗，很后悔没有跳下温暖的海，后悔在父母的卧室中发神经。然后就可以忏悔了吗？她不是基督教徒，没必要忏悔。如果是的话，就会像加缪说的一样，人们只需后悔，就可以无所不为。提起后悔，人人都感到轻车熟路。她不致于。想到加缪，她思考着，什么时候才能见到她心里一直想着的人，里厄。里厄是个作家，她想要寻找到这个人，让他读自己写的诗，然后给意见。但是没人知道他住在哪，他也没有出现过在某个公共场合，他的书也没有关于他的介绍。如果去问出版社，出版社就会告诉她，里厄只寄给了出版社他的作品，附上的是名字和同意出版的说明。说起来，里厄有一点嚣张，但是谁叫他的作品这么美好呢。</p>
+		<p>
+			马鹿回过神，找到里厄是不可能的事情，于是就没有继续想了。不过如果能见到，那当然是好。<br />
+			马鹿回过神，发现她已经忘记了那个没有颜色的女孩子了。<br />
+			她和奶奶说，她发现她忘了自己以前喜欢的女孩子了。<br />
+			奶奶和她说，这是好事。以后会有更多的好事。<br />
+		</p>
 		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
-		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>她和奶奶各自回到自己的房间，开始整理行李，明天就是下船的一天。这个轮船稳得就像是在陆地上一样，没有任何一点晕船的感觉。这挺好的。她躺在床上。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2020.02.20
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p> --->
