--- a/index-contact-wechat.html
+++ b/index-contact-wechat.html
@@ -14,7 +14,7 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">  <!--'javascript:history.go(-1)'-->
+			<a href="javascript:history.go(-1)">  <!--'javascript:history.go(-1)'-->
 				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
 				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
@@ -46,16 +46,7 @@
 </div>
 <div class="about">
 	<div class="writingfront">
-		<p>
-		
-			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
-			<p></p> 
-			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
-			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
-			Instagram: <span style="background-color:rgb(255, 255, 255)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span><br />
-			WeChat: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span>
-		
-	</p>
+		<img src="../forganlu.github.io/image/wechat.JPG" alt="" width="100px">
 	
 	</div>
 </div>
