--- a/index-photography.html
+++ b/index-photography.html
@@ -58,6 +58,45 @@
 			<span style="background-color:rgb(60, 255, 0)" >
 				Incompletely released.<br />
 				不完全发布。</span>
+		</div>
+		<div class="writingfront-writing">
+				<br />
+				<br />
+				<br />
+				<br />
+				我们人类，为了自由，而生活在这个世界上。<br />
+				但是很多时候我们自己却忘记了所做出的努力是为了什么。<br />
+				<br />
+				有一天我走在坚尼地城的海边走廊上，然后我停下来坐在长椅上，周围有很多胖胖的鸽子，它们不停地在啄食人们扔下来的面包屑。那天是阴天，我坐在海边并不觉得很热，反而因为靠近海有点风大，我有点冷。<br />
+				然后我抬头看了看天空，当看到被云遮住的太阳的位置的时候还是会觉得有些许刺眼。后来眼神被旁边一只正在飞的鸽子带了过去。<br />
+				<br />
+				它正在飞。<br />
+				它就盘旋在海边走廊上，一圈又一圈。<br />
+				我的眼睛突然离不开它。<br />
+				“它多自由啊！”我心里想着。<br />
+				“它就是自由吧。”我又想着。<br />
+				<br />
+				也许只有下雨能够困住自由。<br />
+				<br />
+				<br />
+				<br />
+				We, humans, live in this world for the sake of freedom.<br />
+				But most of the time we forget what we are trying so hard for.<br />
+				<br />
+				One day I was walking on the seaside in Kennedy Town, and then I stopped to sit on the bench. There were lots of pigeons around, and they were pecking at the crumbs thrown down by humans. That day was a cloudy day. I didn’t feel hot when I sat there. On the contrary it was a bit windy because near the sea.<br />
+				Then I looked up at the sky, I still felt a little dazzling when I looked at the sun, although it was covered by clouds. Later, my eyes were taken by a flying pigeon.<br />
+				<br />
+				It was flying.<br />
+				It hovered on the seaside corridor, round and round.<br />
+				My eyes couldn’t leave it.<br />
+				“How free it is!” I was thinking.<br />
+				“It is freedom.” I was thinking again.<br />
+				<br />
+				Only rain can trap the freedom.<br />
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+		</div>
 	</div>
 
 	</div>
