--- a/index-about.html
+++ b/index-about.html
@@ -62,6 +62,7 @@
 			<br />
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<br />
+			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism/Greece<br />
 			2021  <strong>Furment</strong> - Creative Media Year1 MFA show<br />
 			<br />
 			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum<br />
