--- a/index-writing.html
+++ b/index-writing.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU/WRITING</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 
 
@@ -56,17 +56,20 @@
 <div class="bbox">
 	
 	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
-			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li></span>
+	<div class="lefthand1">
+		<ul class="lefthead">
+			
+			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
-	<div  class="lefthead1">
+	<!--<div  class="lefthead1">
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
 			<li><a href="../forganlu.github.io/writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
@@ -81,15 +84,19 @@
 			<li><a href="../forganlu.github.io/writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
 	
 		</ul>
-	</div>	
+	</div>	-->
 	<div class="about">
 		<div class="writingfront">
-			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
-			只用于中文版本。<br />
+			<span style="background-color:rgb(60, 255, 0)" >Chinese Only.<br />
+			只用于中文版本。<br /><br />
+			Currently Unavaliable. <br />
+			目前不可用。<br /><br />
+			Thank you, I love you.<br />
+			谢谢，我爱你。
 			<p></p></span>
 			<!--<span style="background-color:rgb(255, 0, 0)" >
 			Selected writings are password required, please<a href="mailto:ganlu2525@outlook.com"><strong> email</strong></a>.<br />
-			部分文字请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span> -->
+			部分文字请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span> 
 			
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
@@ -108,7 +115,7 @@
 			It's a process of introspection, life inspection.<br />
 			A process of relax.<br />
 			My memory.<br />
-			<p></p></span>
+			<p></p></span>-->
 		</p>
 		
 	</div>
