--- a/photography/oldman.html
+++ b/photography/oldman.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU/PHOTOGRAPHY</title>
 <link rel="icon" type="image/x-icon" href="../ICON.png" />
 
 </head>
@@ -30,30 +30,30 @@
 <main>
 <div class="bbox">
 	
-	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 0, 0)" >摄影/photograph</span></a></li>
-			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
-			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
-			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
+	<div class="lefthand1">
+		<ul class="lefthead">
+			
+			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a>
+				<ul >
+					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
+					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
+					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
+					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
+					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
+					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
+					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
+					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+				</ul>
+			</li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
 	</div>
-	<!------------------------lefthead--------------------->
-	<div  class="lefthead1">
-		<ul class="lefthead">
-			<li><a href="../photography/oldman.html"><strong>Old Man</strong></a></li>
-			<li><a href="../photography/liquid.html">Liquid</a></li>
-			<li><a href="../photography/ritzsdream.html">Ritz's Dream</a></li>
-			<li><a href="../photography/ontheroad.html">On the Road</a></li>
-			<li><a href="../photography/building.html">Building</a></li>
-			<li><a href="../photography/hardtosay.html">Hard to say</a></li>
-			<li><a href="../photography/polaroidinhk.html">Polaroid in HK</a></li>
-			<li><a href="../photography/groupphoto.html">Group Photo</a></li>
-			<li><a href="../photography/2021bdp.html">2021BDP</a></li>
-				
-		</ul>
 			
 	</div>	
 	<div class="about">
