--- a/index-about.html
+++ b/index-about.html
@@ -30,13 +30,16 @@
 <div class="bbox">
 	
 	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:white" >绘画/painting</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
-			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 0, 0)" >关于/about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:white" >联络/contact</span></a></li></span>
+	<div class="lefthand1">
+		<ul class="lefthead">
+			
+			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -50,18 +53,20 @@
 	<div class="writingfront">
 		<p>
 		<span style="background-color:white" >
-			<strong>Gan Lu</strong><br />
+			<strong>GAN LU / 甘 露</strong><br />
 			<br />
 			Born 1998, China.<br />
 			Based on Guangzhou / Hong Kong<br />
 			<br />
 			BFA - 5th Studio of Oil Painting Department of Guangzhou Academic of Fine Art<br />
 			MFA - Creative Media of City University of Hong Kong<br />
+			Hong Kong - Switzerland exchange programme - Athens, Greece<br />
 			<br />
 			<br />
 			<br />
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<br />
+			2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS/Greece<br />
 			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism/Greece<br />
 			2021  <strong>Furment</strong> - Creative Media Year1 MFA show<br />
 			<br />
