--- a/index-contact.html
+++ b/index-contact.html
@@ -30,13 +30,16 @@
 <div class="bbox">
 	
 	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
-			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 0, 0)" >联络/contact</span></a></li></span>
+	<div class="lefthand1">
+		<ul class="lefthead">
+			
+			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -48,7 +51,7 @@
 	<div class="writingfront">
 		<p>
 		
-			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
+			<span style="background-color:white" ><strong>GAN LU / 甘 露</strong></span><br />
 			<p></p> 
 			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
