--- a/photography/oldman.html
+++ b/photography/oldman.html
@@ -64,7 +64,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-1.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-1.JPG" alt="" width=auto><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/photograph/old man/old man-2.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/photograph/old man/old man-3.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/photograph/old man/old man-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
