--- a/design/eatmoreappl.html
+++ b/design/eatmoreappl.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
+<link rel="stylesheet" href="../css/mysite.css">
 <title>GANLU/DESIGN</title>
 </head>
 	
@@ -13,9 +13,9 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">
-				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
-				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
+			<a href="../index.html">
+				<img src="../image/logo1.png" alt="" class="img-back">
+				<img src="../image/logo2.png" alt="" class="img-front">
 			</a>
 		</div>
 		
@@ -33,20 +33,20 @@
 	<div class="lefthand1">
 		<ul class="lefthead">
 			
-			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a>
+			<li><a href="../index-design.html"><span  >设计/Deisgn</span></a>
                 <ul>
                     <li>
-                        <a href="../forganlu.github.io/design/eatmoreappl.html">eat more apple</a>
+                        <a href="../design/eatmoreappl.html">Eat more apple</a>
                     </li>
                 </ul>
             
             </li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
-			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
+			<li><a href="../index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -60,7 +60,7 @@
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
-                <img src="../forganlu.github.io/image/design/eatmoreapple/eatmoreapple.png" alt="">
+                <img src="../image/design/eatmoreapple/eatmoreapplemerge.png" alt="" width=800px;>
         </div>
 	</div>
 	
