--- a/painting/Howtodealwithmylife.html
+++ b/painting/Howtodealwithmylife.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU/PAINTING</title>
 <link rel="icon" type="image/x-icon" href="../ICON.png" />
 
 </head>
@@ -30,31 +30,32 @@
 <main>
 <div class="bbox">
 	
-	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 0, 0)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
-			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
-			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
-			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
-		</ul>
-	</div>
-	<!------------------------lefthead--------------------->
-	<div  class="lefthead1">
+	<div  class="lefthand1">
 		<ul class="lefthead">
-			<li><a href="../painting/fieldtrip.html">Field trip</a></li>
-			<li><a href="../painting/iloveyou.html">I love you</a></li>
-			<li><a href="../painting/Meandpoliceman.html">Me and policeman</a></li>	
-			<li><a href="../painting/Howtodealwithmylife.html"><strong>How to deal with my life</strong></a></li>
-			<li><a href="../painting/Sketch.html">Sketch</a></li>	
-			<li><a href="../painting/Collage.html">Collage</a></li>
-			<li><a href="../painting/Backup.html">Back Up</a></li>
-			<li><a href="../painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
-			<li><a href="../painting/EatingGoldfish.html">Eating Goldfish</a></li>
-			<li><a href="../painting/Treasures.html">Treasures</a></li>		
+			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a>
+				
+					<ul >
+						<li ><a href="../forganlu.github.io/painting/fieldtrip.html">Field trip</a></li>
+						<li><a href="../forganlu.github.io/painting/iloveyou.html">I love you</a></li>
+						<li><a href="../forganlu.github.io/painting/Meandpoliceman.html">Me and policeman</a></li>	
+						<li><a href="../forganlu.github.io/painting/Howtodealwithmylife.html">How to deal with my life</a></li>
+						<li><a href="../forganlu.github.io/painting/Sketch.html">Sketch</a></li>	
+						<li><a href="../forganlu.github.io/painting/Collage.html">Collage</a></li>
+						<li><a href="../forganlu.github.io/painting/Backup.html">Back Up</a></li>
+						<li><a href="../forganlu.github.io/painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
+						<li><a href="../forganlu.github.io/painting/EatingGoldfish.html">Eating Goldfish</a></li>
+						<li><a href="../forganlu.github.io/painting/Treasures.html">Treasures</a></li>
+					</ul>	
+				
+			</li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
-			
+		
 	</div>	
 	<div class="about">
 		<div class="container">
