--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU/MEDIA</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
@@ -14,7 +15,7 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="javascript:history.go(-1)">  <!--'javascript:history.go(-1)'-->
+			<a href="index.html">
 				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
 				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
@@ -29,28 +30,38 @@
 <main>
 <div class="bbox">
 	
-	<div class="lefthand1">
+	<!-----------------------tophead----------------------->
+	
+	<!------------------------lefthead--------------------->
+	<div  class="lefthand1">
 		<ul class="lefthead">
-			
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-Mediabased.html"><span  >媒体/Meida Based</span></a>
+                <ul>
+                    <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
+                </ul>
+            </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
 			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
 			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
-	</div>
+		
+	</div>	
 
+	<div class="about">
+		<div class="writingfront">
+			<span style="background-color:rgb(60, 255, 0)" >
+			Incompletely released.<br />
+			不完全发布。</span>
+	</div>
+	</div>
 	
 		
 </div>
-<div class="about">
-	<div class="writingfront">
-		<img src="../forganlu.github.io/image/wechat.JPG" alt="" width="100px">
-	
-	</div>
-</div>
+
+
 </main>
 
 <footer>
