--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -3,7 +3,7 @@
 <head>
 	
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
+<link rel="stylesheet" href="../css/mysite.css">
 <title>GANLU/MEDIA</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
@@ -36,7 +36,7 @@
 	<div  class="lefthand1">
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-Mediabased.html"><span  >媒体/Meida Based</span></a>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
                 </ul>
@@ -55,6 +55,8 @@
 			<span style="background-color:rgb(60, 255, 0)" >
 			Incompletely released.<br />
 			不完全发布。</span>
+            <iframe width="660px" height="auto" src="https://youtu.be/0_395VgwDBg">
+</iframe>
 	</div>
 	</div>
 	
