--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -36,7 +36,7 @@
 	<div  class="lefthand1">
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../forganlu.github.io/Mediabased/foodmemory.html">Food memory</a></li>
                 </ul>
