--- a/index-photography.html
+++ b/index-photography.html
@@ -32,7 +32,7 @@
 		<ul class="lefthead">
 			
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a>
 				<ul >
