--- a/index-about.html
+++ b/index-about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
@@ -34,7 +34,7 @@
 		<ul class="lefthead">
 			
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
