--- a/index-design.html
+++ b/index-design.html
@@ -43,7 +43,7 @@
                 </ul>
             
             </li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
