--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -34,7 +34,7 @@
 	<div  class="lefthand1">
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
-			<li><a href="../forganlu.github.io/index-painting.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a>
 				
 					<ul >
