--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -55,8 +55,7 @@
 			<span style="background-color:rgb(60, 255, 0)" >
 			Incompletely released.<br />
 			不完全发布。</span>
-            <iframe width="660px" height="auto" src="https://youtu.be/0_395VgwDBg">
-</iframe>
+            <iframe width="660px" height="400px" src="https://www.youtube.com/embed/0_395VgwDBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	</div>
 	
