--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="lefthand1">
 		<ul class="lefthead">
 			
-			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<!--<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li> -->
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
@@ -51,7 +51,8 @@
 		<div class="writingfront">
 			<p>
 				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news.</strong><br />
-					
+				This page mainly for artworks showcase.<br />
+				For more discipline please go to <a href="https://www.behance.net/ganlu2525">another page</a> .<br />
 				</span>
 
 			</p>
