--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -35,7 +35,7 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthand1">
 		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<!--<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>-->
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
