--- a/index-contact.html
+++ b/index-contact.html
@@ -33,7 +33,7 @@
 	<div class="lefthand1">
 		<ul class="lefthead">
 			
-			<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>
+			<!--<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>-->
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
@@ -56,6 +56,7 @@
 			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
 			Instagram: <span style="background-color:rgb(255, 255, 255)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span><br />
+			Behance.net/<span style="background-color:rgb(255, 255, 255)" ><a href="https://www.behance.net/ganlu2525"><strong>ganlu2525</strong></a></span>
 			WeChat: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span>
 		
 	</p>
